k8s/base/ingress-currencyconverter.yaml
# k8s/base/ingress-currencyconverter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-converter-ingress
  # This Ingress will be in the default namespace
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Use the EXACT same group name to merge rules into one ALB
    alb.ingress.kubernetes.io/group.name: shared-ingress-group
spec:
  ingressClassName: alb
  rules:
    # Rule for the Currency Converter Application
    - host: app.trialphase.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: currency-converter-service # Checked and verified,matching with service
                port:
                  number: 80 # This must match the port defined in your Service
